1998-12-18  Dan Espen  <dane@mk.bellcore.com>

	* fvwm/move.c (moveLoop): Remove some fprintfs left behind by
	accident.

1998-12-18  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/bindings.c (ParseBindEntry): fixed older patch to combine
	mouse and key binding parsing. Dos this prevent the key binding
	problem?

1998-12-17  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/module.c:
	* fvwm/fvwm.c: applied signal handler patches by Chris Rankin

	* fvwm/fvwm2.1: documented that EdgeScroll handles the "p" suffix too

	* fvwm/move.c (moveLoop): fixed bug: moving windows over page
	boundaries not possible if EdgeScroll 0 0 was used.

	* fvwm/menus.c: backed out my prvious patch for 'recursive' menus and
	did it another (much simpler) way. Now we ignore the popup completely
	if it is already mapped but has a parent different from the current
	menu.

	* fvwm/fvwm2.1: documented syntax changes for SetMenuStyle,
	sorted manpage

	* fvwm/menus.c:
	* fvwm/menus.h:
	* fvwm/builtins.c (ReadMenuFace): implmented visual_style for menus
	that should fix the 'menuface' bug. all traces of the former 'next'
	menu style have been eliminated.

1998-12-16  Paul D. Smith  <psmith@gnu.org>

	* libs/fvwmlib.h: Added #defines to handle the __attribute__ GCC
	extensions.  Use them normally (see the GCC manual for details)
	and they'll be removed harmlessly if you're not using an
	appropriate version of GCC.

	* DEVELOPERS: Added some notes about the automake $TAR issues.

1998-12-16  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/fvwm2.1: Updated manpage for SetMenuStyle: 'next' does not exist
	anymore.

	* fvwm/builtins.c (Recapture): Recapture now swallows all mouse and
	keyboard events (and a few others). This speeds up things dramatically.

1998-12-15  Dan Espen  <dane@mk.bellcore.com>

	* fvwm/fvwm2.1 (Note): Document the way menustyle affects the placement
	of the feedback windows.

1998-12-15  Dominik Vogt  <dominik_vogt@hp.com>
